--- a/mobilityland/test/index.html
+++ b/mobilityland/test/index.html
@@ -3,6 +3,8 @@
 <body>
 <h1>クリックジャッキングテスト</h1>
 <h2>stg</h2>
+<iframe src="https://apps-stg.mobilityland.co.jp/msentry/download/5" width="80%" height="200px"></iframe>
 <h2>prd</h2>
+<iframe src="https://apps.mobilityland.co.jp/msentry/download/5" width="80%" height="200px"></iframe>
 </body>
 </html>
