--- a/mobilityland/test/index.html
+++ b/mobilityland/test/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>クリックジャッキングテスト</h1>
+<h1>テスト</h1>
 <h2>stg</h2>
 <iframe src="https://apps-stg.mobilityland.co.jp/msentry/download/5" width="80%" height="200px"></iframe>
 <h2>prd</h2>
