--- a/mobilityland/test/index.html
+++ b/mobilityland/test/index.html
@@ -3,8 +3,8 @@
 <body>
 <h1>テスト</h1>
 <h2>stg</h2>
-<iframe src="https://apps-stg.mobilityland.co.jp/msentry/download/5" width="80%" height="200px"></iframe>
+<iframe src="https://apps-stg.mobilityland.co.jp/msentry/admin/races/5/files/new?categorynumber=1" width="80%" height="400px"></iframe>
 <h2>prd</h2>
-<iframe src="https://apps.mobilityland.co.jp/msentry/download/5" width="80%" height="200px"></iframe>
+<iframe src="https://apps-stg.mobilityland.co.jp/msentry/admin/races/5/files/new?categorynumber=1" width="80%" height="400px"></iframe>
 </body>
 </html>
